### Добавлено: - глобальные переменные в node - линтинг папки gulp и gulpfile
### Исправлено:
- формирование меню
- в файле path.js ошибки по eslint
- в файле plugins.js ошибки по eslint
- в файле clean.js ошибки по eslint
- в файле fonts.js ошибки по eslint
- в файле html.js ошибки по eslint
- в файле images.js ошибки по eslint
- в файле hero.scss конец строки на lf
- в файле pixel-glass.js ошибки по eslint
- в файле scripts.js ошибки по eslint
- в файле server.js ошибки по eslint
- в файле styles.js ошибки по eslint
- в файле svg.js ошибки по eslint
- в файле vendor.js ошибки по eslint
- в файле gulpfile.js ошибки по eslint
- EOL установлен в LF

### Удалено
- макрос make_menu

--- a/src/templates/blocks/site-nav.j2
+++ b/src/templates/blocks/site-nav.j2
@@ -2,7 +2,7 @@
         <ul class="site-nav">
           {%- for link in menu_items %}
           <li class="site-nav__item">
-            <a class="site-nav__link {%- if link.href == active_item %} site-nav__link--active{% endif -%}" {%- if link.href != active_item %}href="{{ link.href }}.html"{% endif -%}>{{ link.title }}</a>
+            <a class="site-nav__link {%- if link.page == active_item %} site-nav__link--active{% endif -%}" {%- if link.page != active_item %}href="{{ link.href }}"{% endif -%}>{{ link.title }}</a>
           </li>
           {%- endfor %}
         </ul>
